Fix T50078: Vertex Groups not copied over when making proxy.

Reviewers: mont29

Reviewed By: mont29

Differential Revision: https://developer.blender.org/D2368